# experiments

./: .gitattributes  .gitignore  CMakeLists.txt  eigen.hh  eigen_helpers.hh  is_output.hh  jcc.sublime-project  macros.hh  out.hh  pymake.json  readme.md  robotics_styleguide.md  setup.sh  sophus.hh  wbn.md
clang/: find_functions.py
clustering/: CMakeLists.txt  meanshift_view.cc  spatial_hash.cc  spatial_hash.hh
cmake_tools/: CMakeLists.txt
collabs/: fiducial_orientation_error.py  josh.py  liegroup_playground.cc  radiometry.py
cppmv/: cmake.py  cppmv.py  file_system.py  graph.py  log.py  parse.py  readme.md
data/: cube_shape.stl
estimation/: filter.cc  filter.hh  time_point.cc  (+6 more)
fluids/: CMakeLists.txt  basic_2d.cc  fields_2d.cc  fields_2d.hh  navier_stokes_2d.cc  navier_stokes_2d.hh  navier_stokes_2d_test.cc
geometry/: CMakeLists.txt  line.hh  perp.hh  perp_test.cc  plane.cc  plane.hh  ray.cc  ray.hh  ray_ray_approx_intersect.cc  ray_ray_approx_intersect.hh  ray_ray_approx_intersect_test.cc  rotation_to.cc  rotation_to.hh  rotation_to_test.cc  unit_vector.hh
geometry/import/: CMakeLists.txt  read_collada.cc  read_collada.hh  read_from_file.hh  read_stl.cc  read_stl.hh  read_stl_test.cc  read_vox.cc  read_vox.hh  read_vox_test.cc
geometry/intersection/: ray_closest_approach.cc  ray_closest_approach.hh  sphere_plane.hh  sphere_plane_demo.cc  sphere_plane_test.cc
geometry/kinematics/: coupling_test.cc  transform_network.cc  transform_network.hh
geometry/op_tree/: op_tree.cc  op_tree.hh  op_tree_test.cc
geometry/shapes/: circle.hh  cylinder.hh  ellipse.cc  ellipse.hh  fit_ellipse.cc  fit_ellipse.hh  fit_ellipse_test.cc  halfspace.hh  line_segment.hh  ray.cc  ray.hh  sdf_box.cc  sdf_box.hh  sdf_box_demo.cc  triangle.cc  triangle.hh
geometry/spatial/: CMakeLists.txt  bounding_box.hh  bounding_box_test.cc  bounding_volume_hierarchy.cc  bounding_volume_hierarchy.hh  bounding_volume_hierarchy_demo.cc  bounding_volume_hierarchy_test.cc  fit_bounding_box.hh  form_coordinate_frame.cc  form_coordinate_frame.hh  form_coordinate_frame_test.cc  gjk.cc  gjk.hh  gjk_demo.cc  interpolator.cc  interpolator.hh  intersection.hh  nearest_triangle.hh  octree.cc  octree.hh  octree_test.cc  raycaster.cc  raycaster.hh  raycaster_test.cc  sphere_volume.hh  time_interpolator.cc  time_interpolator.hh  time_interpolator_test.cc  triangle_volume.hh  volume.hh
geometry/types/: angle.hh  unit_vector.hh  unit_vector_test.cc
geometry/visualization/: put_bounding_box.cc  put_bounding_box.hh  put_bvh.cc  put_bvh.hh  put_circle.cc  put_collada.cc  put_collada.hh  put_stl.cc  put_stl.hh  put_transform_network.cc  put_transform_network.hh  put_transform_network_demo.cc  visualize_nullspace.cc  visualize_nullspace_demo.cc
glut/: CMakeLists.txt  st_view.cc
numerics/: CMakeLists.txt  compute_convenient_statistics.cc  compute_convenient_statistics.hh  compute_mean.hh  conjugate_gradient.hh  conjugate_gradient_test.cc  cost_function.hh  covariance.hh  covariance_test.cc  exp_gradient.hh  gauss_newton.hh  gauss_newton_test.cc  gradient_descent.cc  gradient_descent.hh  gradient_descent_test.cc  gram_schmidt.hh  group_diff.hh  is_pd.hh  is_symmetric.hh  jacobi_laplacian.hh  jacobi_laplacian_test.cc  line_search.cc  nt_gauss_newton.cc  nt_gauss_newton.hh  nt_gauss_newton_test.cc  num_hessian.hh  numdiff.cc  numdiff.hh  numdiff_test.cc  optimize.cc  optimize.hh  project_psd.hh  project_psd_test.cc  rational_ge.cc  set_diag_to_value.hh  wrap_optimizer.hh
numerics/acceleration/: segment_tree.cc  segment_tree.hh  segment_tree_test.cc  stackless_binary_tree.cc
numerics/functions/: piecewise_linear.cc  piecewise_linear.hh  piecewise_linear_test.cc  quadratic.cc  quadratic.hh  quadratic_test.cc
numerics/import/: csv_to_eigen.cc  csv_to_eigen.hh  csv_to_eigen_test.cc
numerics/optimization/: bracket.cc  bracket.hh  bracket_test.cc  error_function.hh  simplex.cc
raytracing/: CMakeLists.txt  geometry.cc  geometry.hh  geometry_test.cc  numdiff.hh  numdiff_test.cc  optimization.cc  optimization.hh  optimization_test.cc  out.hh  ransac.cc  ransac.hh  ransac_test.cc  rt.sublime-project  rt.sublime-workspace  types.hh  view.cc
spatial_geometry/: CMakeLists.txt  eigen.hh  line.hh  perp.hh  perp_test.cc  plane.hh
viewer/: CMakeLists.txt  gl_aliases.hh  gl_renderable_buffer.cc  gl_renderable_buffer.hh  gl_size.hh  gl_types.hh  gl_viewport.hh  jcc.sublime-workspace  metaviewer.cc  metaviewer.hh  metaviewer_demo.cc  projection.cc  projection.hh  readme.md  simple_window.cc  simple_window.hh  view_demo.cc  view_demo_3d.cc  window.hh  window_2d.cc  window_2d.hh  window_3d.cc  window_3d.hh  window_manager.cc  window_manager.hh
viewer/colors/: CMakeLists.txt  colors.hh  material.cc  material.hh  palette.hh  solarized.cc  solarized.hh  viridis.cc  viridis.hh
viewer/cuda/: window_cuda.hh
viewer/interaction/: CMakeLists.txt  callback_manager.cc  callback_manager.hh  imgui_manager.cc  imgui_manager.hh  keys.hh  plot_builder.cc  plot_builder.hh  ui2d.cc  ui2d.hh  view3d.cc  view3d.hh
viewer/primitives/: CMakeLists.txt  box.cc  box.hh  camera.cc  camera.hh  frame.cc  frame.hh  geometry_buffer.cc  geometry_buffer.hh  grid.hh  image.cc  image.hh  image_frame.cc  image_frame.hh  plot.cc  plot.hh  primitive.hh  primitive_types.hh  scene_tree.cc  scene_tree.hh  simple_geometry.cc  simple_geometry.hh  simple_geometry_primitives.cc  simple_geometry_primitives.hh
viewer/rendering/: pre_render.cc  pre_render.hh  smart_texture.cc  smart_texture.hh
viewer/text/: freetype_interface.cc  gl_text.cc  gl_text.hh
vision/: CMakeLists.txt  block_transform.hh  calibrate.cc  calibration_sim.cc  camera_model.hh  camera_model_test.cc  features.cc  features.hh  features_test.cc  histogram_equalize.cc  image_align.cc  image_align.hh  image_align_test.cc  main.cc  readme.md  robust_estimator.hh  run_map.cc
vision/bootstrapping/: CMakeLists.txt  bootstrap_pose.cc  bootstrap_pose.hh  bootstrap_pose_test.cc
vision/render/: CMakeLists.txt  render_from_pose.cc  render_from_pose.hh  render_from_pose_test.cc  tracking_simulator.cc
(+297 files in other folders)
